--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "underscore": "^1.8.3",
     "backbone": "^1.3.2",
-    "jquery": "^2.2.1"
+    "jquery": "^2.2.1",
+    "font-awesome": "fontawesome#^4.5.0",
+    "font-awesome-animation": "^0.0.8"
   }
 }
